--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Home/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<a class="btn" asp-area="" asp-controller="Client" asp-action="Index">Client</a>
+<a class="btn" asp-area="" asp-controller="Producer" asp-action="Index">Producer</a>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
