--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/_ViewImports.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AsociatiaDeTarani
 @using AsociatiaDeTarani.Models
+@using AsociatiaDeTarani.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
