--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = "_ProducerLayout";
 }
 
@@ -8,6 +7,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 
-<div id="jsGrid2"></div>
+<div id="productJsGrid"></div>
 
-<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/productJsGrid.js" asp-append-version="true"></script>
