Producers can view products

--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Producer/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Producer/Index.cshtml
@@ -1,7 +1,12 @@
 ﻿
 @{
     Layout = "_ProducerLayout";
+    @model ProducersListViewModel
 }
+
+
+
+<div id="label" style="font-size:50px"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
@@ -11,3 +16,4 @@
 <div id="jsGrid2"></div>
 
 <script src="~/js/site.js" asp-append-version="true"></script>
+
