--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Shared/_ClientLayout.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Shared/_ClientLayout.cshtml
@@ -21,7 +21,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Pagina principala</a>
                         </li>
                         <li>
                             <a class="nav-link" asp-area="" asp-controller="Order" asp-action="ShoppingCart">
