--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/_ViewImports.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AsociatiaDeTarani
 @using AsociatiaDeTarani.Models
 @using AsociatiaDeTarani.ViewModels
+@using AsociatiaDeTarani.Controllers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
