--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Shared/_ProducerLayout.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Shared/_ProducerLayout.cshtml
@@ -23,7 +23,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Producer" asp-action="Index">Pagina principala</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" id="adaugareProdus" style="display:none">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Adaugare produs</a>
                         </li>
                         <li class="nav-item">
