Logo + a little css

--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Client/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Client/Index.cshtml
@@ -12,6 +12,8 @@
             <img class="card-img" src="@Url.Content(product.PhotoUrl)"/>
             <div class="card-body">
                 <h5 class="card-title">@product.Name</h5>
+                <h3 class="card-text">@product.Producer</h3>
+                <h3 class="card-text">@product.Price lei/kg</h3>
             </div>
         </div>
     }
