--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Producer/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Producer/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 
-<div id="label" style="font-size:50px"></div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
@@ -15,7 +15,7 @@
 
 <div id="jsGrid2"></div>
 
-
+<div id="label" style="font-size:25px;padding-top:2em"></div>
 
 <script src="~/js/site.js" asp-append-version="true"></script>
 
