--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Shared/_ClientLayout.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Shared/_ClientLayout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Pagina principala</a>
                         </li>
                         <li>
-                            <a class="nav-link" asp-area="" asp-controller="Order" asp-action="ShoppingCart">
+                            <a class="nav-link" asp-area="" asp-controller="ShoppingCart" asp-action="Index">
                                 <i class="fa fa-shopping-cart"></i>
                             </a>
                         </li>
