--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderForm.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderForm.cshtml
@@ -1,59 +1,66 @@
 ﻿@model AsociatiaDeTarani.ViewModels.OrderDetailsViewModel
 
-@{
-    ViewBag.Title = "Create";
-    Layout = "_ClientLayout";
-}
+@{ ViewBag.Title = "Create";
+    Layout = "_ClientLayout"; }
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 @using (Html.BeginForm("OrderForm", "Order", FormMethod.Post, htmlAttributes: new { @class = "form-group row" }))
 {
-    @Html.AntiForgeryToken()
-<div class="form-horizontal">
-    <h4>Detalii personale</h4>
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.Adress, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.Adress, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Adress, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <h4 style="margin:1em">Detalii comanda</h4>
-    <div class="form-group">
-        @Html.LabelFor(model => model.PlacementDate, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.PlacementDate, new { htmlAttributes = new { @class = "form-control" ,type="date",@placeholder="invoice date", disabled="disabled" } })
-            @Html.ValidationMessageFor(model => model.PlacementDate, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" ,} } )
-            @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <input type="submit" value="Submit" class="btn btn-block btn-primary" />
-</div>
-    
-}
-
+@Html.AntiForgeryToken()
+                <div class="container">
+                    <div class="form-horizontal">
+                        <fieldset class="section-border">
+                            <legend class="section-border">
+                                Detalii personale
+                            </legend>
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-8">
+                                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Adress, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-8">
+                                    @Html.EditorFor(model => model.Adress, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Adress, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-8">
+                                    @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </fieldset>
+                        <fieldset class="section-border">
+                            <legend class="section-border">
+                                Detalii comanda
+                            </legend>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.PlacementDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-8">
+                                    @Html.EditorFor(model => model.PlacementDate, new { htmlAttributes = new { @class = "form-control", type = "date", @placeholder = "invoice date", disabled = "disabled" } })
+                                    @Html.ValidationMessageFor(model => model.PlacementDate, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-8">
+                                    @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly", } })
+                                    @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </fieldset>
+                        <div class="col-md-6">
+                            <input type="submit" value="Trimite comanda" class="btn btn-block btn-primary" />
+                        </div>
+                    </div>
+                </div>}
 
 <div>
     @Html.ActionLink("Vezi cosul", "ShoppingCart")
