Some data added

--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderForm.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderForm.cshtml
@@ -63,5 +63,5 @@
                 </div>}
 
 <div>
-    @Html.ActionLink("Vezi cosul", "ShoppingCart")
+    @Html.ActionLink("Vezi cosul", "Index","ShoppingCart")
 </div>
