--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Shared/_Layout.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body style="background-image: linear-gradient(to bottom, #d1d16b, #cad56e, #c2da72, #bade77, #b1e27d, #a5e688, #99ea94, #8deea1, #7df2b6, #6ef6cb, #63f9df, #5ffbf1);">
+<body>
 
     <div class="container">
         <main role="main" class="pb-3">
