--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderForm.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderForm.cshtml
@@ -51,7 +51,7 @@
                 <div class="form-row" style="margin-bottom:2em">
                         @Html.LabelFor(model => model.TotalPrice, "Pretul total", htmlAttributes: new { @class = "control-label col-md-1" })
                     <div class="col-md-5">
-                        @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" ,placeholder=ViewBag.total} })
+                        @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" ,placeholder=TempData["totalShowed"]} })
                         @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
                     </div>
                 </div>
