--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Producer/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Producer/Index.cshtml
@@ -17,6 +17,6 @@
 
 <div id="label" style="font-size:25px;padding-top:2em"></div>
 
-<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/producerJsGrid.js" asp-append-version="true"></script>
 
 
