--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/ShoppingCart/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/ShoppingCart/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="container">
     <div id="shoppingCartGrid"></div>
     <a id="orderButton" class="btn btn-success" style="margin-top:1em; margin-bottom:1em; display: none;" asp-area="" asp-controller="Order" asp-action="OrderForm">Comanda</a>
-    <h3 id="validForOrder" style="display:none;">Comanda nu poate fi efectuata</h3>
+    <h3 id="validForOrder" style="display:none; margin-top:1em">Comanda nu poate fi efectuata, verifica stocul produselor si comanda minima pe care o accepta producatorul de la care doriti sa cumparati</h3>
 </div>
 
 <script src="~/js/shoppingCartJsGrid.js" asp-append-version="true"></script>
