--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistoryForClient.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistoryForClient.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "_ProducerLayout";
+    Layout = "_ClientLayout";
 }
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -7,10 +7,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 
+
+<h1 style="margin:2em">Comanda ta a fost plasata</h1>
 <div id="orderJsGrid"></div>
 
 
 <script src="~/js/orderJsGrid.js" asp-append-version="true"></script>
-<script>
-    orderJsGrid.init();
-</script>
