--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/Index.cshtml
@@ -7,8 +7,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 
+<p>
+    <a asp-action="New" class="btn btn-sm btn-secondary rounded-0 text-uppercase"><i class="fas fa-plus-circle"></i> Adauga produs nou</a>
+</p>
 <div id="productJsGrid"></div>
-
 
 <script src="~/js/productJsGrid.js" asp-append-version="true"></script>
 
