Image upload correctly in folder

--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/Index.cshtml
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 
 <p>
-    <a asp-action="New" class="btn btn-sm btn-secondary rounded-0 text-uppercase"><i class="fas fa-plus-circle"></i> Adauga produs nou</a>
+    <a id="addProduct" asp-controller="Product" asp-action="New" class="btn btn-sm btn-secondary rounded-0 text-uppercase"><i class="fas fa-plus-circle"></i> Adauga produs nou</a>
 </p>
 <div id="productJsGrid"></div>
 
