--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderForm.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderForm.cshtml
@@ -8,63 +8,65 @@
     @using (Html.BeginForm("OrderForm", "Order", FormMethod.Post, htmlAttributes: new { @class = "form-group row" }))
     {
         @Html.AntiForgeryToken()
-    <div class="container">
-        <div class="form-group">
-            <fieldset class="section-border">
-                <legend class="section-border">
-                    Detalii personale
-                </legend>
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-row" style="margin-bottom:2em">
-                    @Html.LabelFor(model => model.Name, "Nume", new { @class = "control-label col-md-1" })                    
-                <div class="col-md-8">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { placeholder = "Introduceti numele aici", @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
-                <div class="form-row" style="margin-bottom:2em">
+        <div class="container">
+            <div class="form-group">
+                <fieldset class="section-border">
+                    <legend class="section-border">
+                        Detalii personale
+                    </legend>
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-row" style="margin-bottom:2em">
+                        @Html.LabelFor(model => model.Name, "Nume", new { @class = "control-label col-md-1" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { placeholder = "Introduceti numele aici", @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-row" style="margin-bottom:2em">
                         @Html.LabelFor(model => model.Adress, "Adresa", htmlAttributes: new { @class = "control-label col-md-1" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Adress, new { htmlAttributes = new { placeholder = "Introduceti adresa aici", @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Adress, "", new { @class = "text-danger" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.Adress, new { htmlAttributes = new { placeholder = "Introduceti adresa aici", @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Adress, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
-                <div class="form-row" style="margin-bottom:2em">
-                    @Html.LabelFor(model => model.PhoneNumber, "Numar telefon", htmlAttributes: new { @class = "control-label col-md-1" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { placeholder = "Introduceti numarul de telefon aici", @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                    <div class="form-row" style="margin-bottom:2em">
+                        @Html.LabelFor(model => model.PhoneNumber, "Numar telefon", htmlAttributes: new { @class = "control-label col-md-1" })
+                        <div class="col-md-6">
+                            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { placeholder = "Introduceti numarul de telefon aici", @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
-            </fieldset>
-            <fieldset class="section-border">
-                <legend class="section-border">
-                    Detalii comanda
-                </legend>
-                <div class="form-row" style="margin-bottom:2em">
+                </fieldset>
+                <fieldset class="section-border">
+                    <legend class="section-border">
+                        Detalii comanda
+                    </legend>
+                    <div class="form-row" style="margin-bottom:2em">
                         @Html.LabelFor(model => model.PlacementDate, "Data comenzii", htmlAttributes: new { @class = "control-label col-md-1" })
-                    <div class="col-md-5">
-                        @Html.EditorFor(model => model.PlacementDate, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled", @readonly = "readonly", placeholder=DateTime.Now.ToString("dd/MM/yyyy") } })
-                        @Html.ValidationMessageFor(model => model.PlacementDate, "", new { @class = "text-danger" })
+                        <div class="col-md-5">
+                            @Html.EditorFor(model => model.PlacementDate, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled", @readonly = "readonly", placeholder = DateTime.Now.ToString("dd/MM/yyyy") } })
+                            @Html.ValidationMessageFor(model => model.PlacementDate, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
-                <div class="form-row" style="margin-bottom:2em">
+                    <div class="form-row" style="margin-bottom:2em">
                         @Html.LabelFor(model => model.TotalPrice, "Pretul total", htmlAttributes: new { @class = "control-label col-md-1" })
-                    <div class="col-md-5">
-                        @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" ,placeholder=ViewBag.total} })
-                        @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
+                        <div class="col-md-5">
+                            @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly", placeholder = ViewBag.total + " LEI"} })
+                            @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </fieldset>
+                <div class="form-row" style="margin-bottom:3em">
+                    <div class="col-md-4">
+                        @Html.ActionLink("Vezi cosul", "Index", "ShoppingCart")
+                        <i class="fa fa-shopping-cart"></i>
+                    </div>
+                    <div class="col-md-4 offset-4">
+                        <input type="submit" value="Trimite comanda spre procesare" class="btn btn-block btn-secondary" />
                     </div>
                 </div>
-            </fieldset>
-            <div class="col-md-4 offset-8">
-                <input type="submit" value="Trimite comanda spre procesare" class="btn btn-block btn-secondary" />
             </div>
         </div>
-    </div>
-}
+    }
 
-    <div>
-        @Html.ActionLink("Vezi cosul", "Index", "ShoppingCart")
-        <i class="fa fa-shopping-cart"></i>
-    </div>
 </body>
